add simple upload file streamlit ui to project

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@ BASE_AI_API_URL=https://api.tapsage.com/api/v1/wrapper/openai_chat_completion
 
 VT_API_KEY=virustotal-apiKey
 
-HOST_IP=127.0.0.1
+DEFAULT_HOST=127.0.0.1
+DEFAULT_PORT=8000
