--- a/src/rules/credential_access.yml
+++ b/src/rules/credential_access.yml
@@ -1,5 +1,3 @@
-# src/rules/credential_access.yml
----
 rule_id: CE-CRED-001
 rule_name: LSASS Memory Access
 description: >
@@ -16,11 +14,15 @@ mitre_mapping:
 detection:
   selection:
     target_process_name: 'lsass.exe'
+  # FIX: Added more known security products to the filter to reduce false positives.
   filter:
-    source_process_name: # List of known good security tools
+    source_process_name:
       - 'MsMpEng.exe'
       - 'svchost.exe'
       - 'defender.exe'
+      - 'SophosAV.exe'
+      - 'SentinelAgent.exe'
+      - 'carbonblack.exe'
   condition: selection and not filter
 false_positives:
   - Legitimate security and endpoint protection products.
@@ -28,3 +30,32 @@ tags:
   - credential_access
   - lsass
   - mimikatz
+---
+rule_id: CE-CRED-002
+rule_name: NTDS.dit Dumping via ntdsutil
+description: >
+  Detects the use of ntdsutil.exe to create a copy of the NTDS.dit database,
+  which contains all Active Directory domain credentials. This is a classic
+  credential dumping technique.
+author: CyborEye Threat Research
+severity: Critical
+log_sources:
+  - sysmon_event_1
+mitre_mapping:
+  tactic: Credential Access (TA0006)
+  technique_id: T1003.003
+  technique_name: "OS Credential Dumping: NTDS"
+detection:
+  selection:
+    process_name: 'ntdsutil.exe'
+    process_commandline:
+      - 'ac i ntds'
+      - 'ifm'
+      - 'create full'
+  condition: selection
+false_positives:
+  - Legitimate backup procedures by domain administrators, though this is rare.
+tags:
+  - credential_access
+  - ntds
+  - active_directory
